# vibecoding-and-agnet-with-tools-and-mcps-python

./: .env.example  .gitignore  main.py  pyproject.toml
docs/: architecture.md  frontend_plan.md  phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  rate_limit_demo.md  rate_limit_fixes.md  rate_limiting.md  roadmap.mdx  workflows-agents.mdx
docs/prompts/: README.md
prompts/research/: research.v1.md  research.v2.md
prompts/synth/: synth.v1.md
prompts/synth.parent/: synth.parent.v1.md
prompts/triage/: triage.v1.md  triage.v2.md  triage.v3.md  triage.v4.md  triage.v5.md  triage.v6.md
src/teamflow/agents/: research.py  synth.py  tools.py  triage.py
src/teamflow/api/: app.py  routes.py  schemas.py
src/teamflow/core/: config.py  models.py  prompts.py
src/teamflow/infrastructure/: events.py  logging.py  repository.py
src/teamflow/orchestration/: graph.py  state.py
tests/: conftest.py  test_graph.py  test_prompts.py  test_research.py  test_tasks.py  test_tools.py  test_triage.py
